syntax = "proto3";

package dmx_controller;

import "proto/beat.proto";

message AudioFile {
  message AudioMetadata {
    string artist = 2;
    string file_name = 3;
  }

  string name = 1;
  bytes contents = 2;
  string mime = 3;
  AudioMetadata metadata = 4;
  BeatMetadata beat_metadata = 5;
}
