syntax = "proto3";

package dmx_controller;

import "proto/color.proto";

message DmxFixtureDefinition {
  message StrobeMapping {
    int32 no_strobe = 1;
    int32 slow_strobe = 2;
    int32 fast_strobe = 3;
  }

  message Mode {
    string name = 1;
    uint32 num_channels = 2;
    map<uint32, Channel> channels = 3;
  }

  message Channel {
    message AngleMapping {
      /** Minimum number of degrees that a "pan" or "tilt" channel can move. */
      int32 min_degrees = 1;

      /** Maximm number of degrees that a "pan" or "tilt" channel can move. */
      int32 max_degrees = 2;
    }

    message AmountMapping {
      /*
       * The minimum value [0, 255] for this channel.
       * Used to map a sub range of a channel on a fixture.
       */
      uint32 min_value = 1;

      /*
       * The minimum value [0, 255] for this channel.
       * Used to map a sub range of a channel on a fixture.
       */
      uint32 max_value = 2;
    }

    message ColorWheelMapping {
      message ColorWheelColor {
        string name = 1;
        uint32 value = 2;
        Color color = 3;
      }

      repeated ColorWheelColor colors = 1;
    }

    string type = 1;

    /* Default value to output for this channel. */
    uint32 default_value = 4;

    oneof mapping {
      AngleMapping angle_mapping = 8;
      AmountMapping amount_mapping = 9;
      ColorWheelMapping color_wheel_mapping = 10;
    }

    reserved 6; // uint32 deprecated_min_value = 6 [ deprecated = true ];
    reserved 7; // uint32 deprecated_max_value = 7 [ deprecated = true ];
    reserved 2; // int32 deprecated_min_degrees = 2 [ deprecated = true ];
    reserved 3; // int32 deprecated_max_degrees = 3 [ deprecated = true ];
    reserved 5; // StrobeMapping deprecated_strobe = 5 [ deprecated = true ];
  }

  string global_id = 5;
  string name = 1;
  string manufacturer = 2;
  map<string, Mode> modes = 6;

  uint32 num_channels = 4 [deprecated = true];
  map<uint32, Channel> channels = 3 [deprecated = true];
}

message PhysicalDmxFixture {
  string name = 1;
  string fixture_definition_id = 5;
  string fixture_mode = 6;
  uint32 channel_offset = 3;

  map<string, double> channel_offsets = 7;

  reserved 2; // uint32 deprecated_uint32_fixture_definition_id = 2 [ deprecated = true ];
  reserved 4; // uint64 deprecated_uint64_fixture_definition_id = 4 [deprecated = true];
}
