syntax = "proto3";

package dmx_controller;

import "proto/fixture.proto";

message Universe {
  string name = 1;

  map<uint64, PhysicalFixture> fixtures = 2;
}

message SerializedUniverse {
  uint64 id = 1;
  Universe universe = 2;
  map<uint64, FixtureDefinition> fixture_definitions = 3;
}
