---
title: dmx-controller.app
---

classDiagram
  note "This is the propsoed\nstructure"
  Project --> Show
  Project --> Scene
  Project --> DmxFixtureDefinition
  Project --> Universe
  Project --> AudioFile
  Show ..> AudioFile
  Show ..> Universe
  Show --> Layer
  Scene --> Layer
  Layer --> Effect
  Universe --> PhysicalDmxFixture
  PhysicalDmxFixture ..> DmxFixtureDefinition
